--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc -p .",
+     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "build": "esbuild src/index.ts --bundle --platform=node --target=node20 --outfile=dist/index.js",
     "start": "node dist/index.js"
   },
   "keywords": [],
@@ -32,6 +32,7 @@
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.5.2",
     "@types/uuid": "^10.0.0",
+    "esbuild": "^0.25.10",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.2"
