--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
-  "scripts": {
-     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "esbuild src/index.ts --bundle --platform=node --target=node20 --outfile=dist/index.js",
-    "start": "node dist/index.js"
-  },
+ "scripts": {
+  "dev": "tsx watch src/index.ts",
+  "build": "esbuild src/index.ts --bundle --platform=node --target=node20 --outfile=dist/index.js",
+  "start": "node dist/index.js"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
