--- a/qna-hub-spark-main/package.json
+++ b/qna-hub-spark-main/package.json
@@ -64,6 +64,7 @@
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.6",
     "vaul": "^0.9.9",
+    "vite-plugin-pwa": "^1.0.3",
     "zod": "^3.25.76"
   },
   "devDependencies": {
