--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,4 @@ JWT_SECRET = your_jwt_secret_key
 JWT_EXPIRES_IN = 1d
 USE_MOCK_API = false
 CLIENT_ORIGIN = http://localhost:8080
+GEMINI_API_KEY = AIzaSyBmaDRsNtk8uN8Z7e2JNh3fS0wqL-Unt6Y
