--- a/server/package.json
+++ b/server/package.json
@@ -3,22 +3,24 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
- "scripts": {
-  "dev": "tsx watch src/index.ts",
-  "build": "esbuild src/index.ts --bundle --platform=node --target=node20 --outfile=dist/index.js",
-  "start": "node dist/index.js"
-},
+  "scripts": {
+    "dev": "tsx watch src/index.ts",
+    "build": "esbuild src/index.ts --bundle --platform=node --target=node20 --outfile=dist/index.js",
+    "start": "node dist/index.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@google/genai": "^1.21.0",
     "@vendia/serverless-express": "^4.12.6",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mime": "^4.1.0",
     "mongoose": "^8.18.2",
     "morgan": "^1.10.1",
     "uuid": "^13.0.0",
@@ -30,7 +32,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
-    "@types/node": "^24.5.2",
+    "@types/node": "^24.6.0",
     "@types/uuid": "^10.0.0",
     "esbuild": "^0.25.10",
     "ts-node-dev": "^2.0.0",
