--- a/qna-hub-spark-main/package.json
+++ b/qna-hub-spark-main/package.json
@@ -59,6 +59,7 @@
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
+    "react-select": "^5.10.2",
     "react-syntax-highlighter": "^15.6.6",
     "recharts": "^2.15.4",
     "sonner": "^1.7.4",
